--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -3,10 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.FragmentBeranda">
+    tools:context=".Fragment.FragmentBeranda"
+    android:background="@color/white">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/berandaRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/recycler_item"/>
 
 </FrameLayout>
