--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,7 +26,7 @@
                 android:layout_marginEnd="15dp"
                 android:layout_marginBottom="15dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/baseline_person_24"
                 app:shapeAppearanceOverlay="@style/roundedImage" />
 
             <LinearLayout
@@ -42,7 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:text="Username"
+                    android:text="Loading..."
                     android:textColor="@color/black"
                     android:textSize="21dp"
                     android:textStyle="bold" />
@@ -60,7 +60,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@id/ivProfilePicture"
-                    android:text="Role"
+                    android:text="Loading..."
                     android:textSize="17dp" />
             </LinearLayout>
 
