--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -51,7 +51,7 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/recLokasi"
+            android:id="@+id/tvLokasi"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_marginStart="0dp"
@@ -67,21 +67,21 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/recTanggal"
+            android:id="@+id/tvTanggal"
             android:text="Tanggal"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="15dp"
             android:textAlignment="textEnd"
             android:textColor="@color/black"
             android:textSize="14sp"
-            android:layout_below="@id/recLokasi"
-            android:layout_toEndOf="@id/recUser"
+            android:layout_below="@id/tvLokasi"
+            android:layout_toEndOf="@id/tvUser"
             android:textStyle="bold"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/recUser"
+            android:id="@+id/tvUser"
             android:text="User"
             android:gravity="center_vertical"
             android:textColor="@color/black"
@@ -104,7 +104,7 @@
             android:layout_below="@id/recImage"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="12dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="10dp"
             android:textStyle="bold"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -118,72 +118,199 @@
             android:layout_marginBottom="10dp"
             android:visibility="gone">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:text="Titik Koordinat : "
-                tools:ignore="MissingConstraints"
-                android:visibility="visible"/>
+           <RelativeLayout
+               android:id="@+id/bigContainer"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               tools:ignore="MissingConstraints">
 
-            <TextView
-                android:id="@+id/recLongitude"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Longitude"
-                app:layout_constraintStart_toEndOf="@+id/textView"
-                android:layout_marginStart="10dp"
-                tools:ignore="MissingConstraints"
-                android:visibility="visible"/>
+               <RelativeLayout
+                   android:id="@+id/rlKodeQR"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/recLatitude"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Latitude"
-                app:layout_constraintStart_toEndOf="@+id/recLongitude"
-                tools:ignore="MissingConstraints"
-                android:layout_marginStart="10dp"
-                android:visibility="visible"/>
+                   <TextView
+                       android:id="@+id/textView3"
+                       android:layout_width="150dp"
+                       android:layout_height="wrap_content"
+                       android:text="Kode QR  "/>
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Status Pengecekan :"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
-                tools:ignore="MissingConstraints" />
+                   <TextView
+                       android:id="@+id/recDetailQR"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:text="Kode QR"
+                       android:layout_toEndOf="@id/textView3"
+                       android:layout_marginStart="10dp"/>
+
+               </RelativeLayout>
+
+               <RelativeLayout
+                   android:id="@+id/rlLokasi"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@id/rlKodeQR"
+                   android:layout_marginTop="10dp">
+
+                   <TextView
+                       android:id="@+id/textView4"
+                       android:layout_width="150dp"
+                       android:layout_height="wrap_content"
+                       android:text="Lokasi Check Point "/>
+
+                   <TextView
+                       android:id="@+id/detailLokasi"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="10dp"
+                       android:text="Lokasi"
+                       android:layout_toEndOf="@id/textView4"/>
+
+               </RelativeLayout>
+
+               <RelativeLayout
+                   android:id="@+id/rlKordinat"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   tools:ignore="MissingConstraints"
+                   android:layout_below="@+id/rlLokasi"
+                   android:layout_marginTop="10dp">
+
+                   <TextView
+                       android:id="@+id/textView"
+                       android:layout_width="150dp"
+                       android:layout_height="wrap_content"
+                       android:text="Titik Koordinat  "/>
+
+                   <TextView
+                       android:id="@+id/tvLongitude"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:text="Longitude"
+                       android:layout_toEndOf="@id/textView"
+                       android:layout_marginStart="10dp"/>
+
+                   <TextView
+                       android:id="@+id/tvLatitude"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:text="Latitude"
+                       android:layout_toEndOf="@id/tvLongitude"
+                       android:layout_marginStart="10dp"/>
+
+               </RelativeLayout>
+
+               <RelativeLayout
+                   android:id="@+id/rlPengecekan"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@id/rlKordinat"
+                   android:layout_marginTop="10dp">
+
+                   <TextView
+                       android:id="@+id/textView2"
+                       android:layout_width="150dp"
+                       android:layout_height="wrap_content"
+                       android:text="Status Pengecekan "/>
+
+                   <TextView
+                       android:id="@+id/tvStatus"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="10dp"
+                       android:text="Checked"
+                       android:layout_toEndOf="@id/textView2"/>
+
+               </RelativeLayout>
+
+               <RelativeLayout
+                   android:id="@+id/rlPemeriksa"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@id/rlPengecekan"
+                   android:layout_marginTop="10dp">
+
+                   <TextView
+                       android:id="@+id/textView5"
+                       android:layout_width="150dp"
+                       android:layout_height="wrap_content"
+                       android:text="Diperiksa Oleh "/>
+
+                   <TextView
+                       android:id="@+id/detailPemeriksa"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_marginStart="10dp"
+                       android:text="User"
+                       android:layout_toEndOf="@id/textView5"/>
+
+               </RelativeLayout>
+
+           </RelativeLayout>
 
             <RelativeLayout
-                android:layout_width="match_parent"
+                android:id="@+id/relativeLayout"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/bigContainer"
                 tools:ignore="MissingConstraints"
                 android:layout_marginTop="10dp">
-
 
                 <ImageView
                     android:id="@+id/iconEdit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="10dp"
                     android:src="@drawable/baseline_edit_24"
                     app:layout_constraintEnd_toStartOf="@+id/recUpdate"
-                    tools:ignore="MissingConstraints"
-                    android:layout_centerVertical="true"
-                    android:layout_marginEnd="10dp"/>
+                    tools:ignore="MissingConstraints" />
 
                 <TextView
                     android:id="@+id/recUpdate"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="30dp"
+                    android:layout_toEndOf="@id/iconEdit"
                     android:gravity="center_vertical"
                     android:text="Update"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    tools:ignore="MissingConstraints"
-                    android:layout_toEndOf="@id/iconEdit"/>
+                    tools:ignore="MissingConstraints" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/relativeLayout2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bigContainer"
+                tools:ignore="MissingConstraints"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:id="@+id/iconHistory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/history"
+                    app:layout_constraintEnd_toStartOf="@+id/recHistory"
+                    tools:ignore="MissingConstraints" />
+
+                <TextView
+                    android:id="@+id/recHistory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_toEndOf="@id/iconHistory"
+                    android:gravity="center_vertical"
+                    android:text="Riwayat"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    tools:ignore="MissingConstraints" />
             </RelativeLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
