--- a/app/src/main/res/layout/recycler_item_history.xml
+++ b/app/src/main/res/layout/recycler_item_history.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/recycler_equipment_card"
+    android:id="@+id/recycler_card"
     android:layout_marginStart="12dp"
     android:layout_marginEnd="12dp"
     android:layout_marginHorizontal="10dp"
