--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="main">#2b2b2b</color>
-    <color name="second">#FFFFFFFF</color>
+    <color name="main">#23aae6</color>
+    <color name="second">#5ad7ff</color>
 
 <!--  Register Edit Text Field  -->
     <color name="strokeColor">#FF000000</color>
