--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints"
         android:layout_margin="30dp"
-        android:backgroundTint="@color/second"
+        android:backgroundTint="@color/white"
         android:elevation="30dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
