--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -27,36 +27,12 @@
             android:scaleType="centerCrop"/>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:id="@+id/recQr"
-            android:text="Kode QR"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="10dp"
-            android:layout_toEndOf="@id/recImage"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:id="@+id/recSpace"
-            android:text=" / "
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="0dp"
-            android:layout_toEndOf="@id/recQr"
-            android:textStyle="bold"/>
-
-        <TextView
             android:id="@+id/tvLokasi"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_marginStart="0dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
-            android:layout_toEndOf="@+id/recSpace"
+            android:layout_toEndOf="@+id/recImage"
             android:layout_marginEnd="10dp"
             android:maxLines="1"
             android:text="Lokasi"
@@ -65,7 +41,7 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvTanggal"
             android:text="Tanggal"
@@ -74,9 +50,10 @@
             android:textAlignment="textEnd"
             android:textColor="@color/black"
             android:textSize="14sp"
-            android:layout_below="@id/tvLokasi"
-            android:layout_toEndOf="@id/tvUser"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:layout_toEndOf="@id/tvLokasi"
+            android:layout_marginTop="15dp"
+            android:layout_alignParentEnd="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -87,7 +64,7 @@
             android:textColor="@color/black"
             android:textSize="14sp"
             android:layout_toEndOf="@id/recImage"
-            android:layout_below="@id/recQr"
+            android:layout_below="@id/tvLokasi"
             android:layout_marginStart="10dp"
             android:maxLines="1"
             android:layout_marginBottom="12dp"
@@ -106,6 +83,36 @@
             android:layout_marginBottom="12dp"
             android:layout_marginTop="10dp"
             android:textStyle="bold"/>
+
+        <LinearLayout
+            android:id="@+id/linearLayoutMap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/recImage"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_alignParentEnd="true"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/ivLocation"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/baseline_map_24"
+                android:layout_marginEnd="5dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/recMaps"
+                android:text="Cari di Map"
+                android:gravity="center_vertical"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:layout_toStartOf="@id/ivLocation"/>
+
+        </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/expandableCard"
@@ -131,7 +138,7 @@
 
                    <TextView
                        android:id="@+id/textView3"
-                       android:layout_width="150dp"
+                       android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="Kode QR  "/>
 
@@ -154,7 +161,7 @@
 
                    <TextView
                        android:id="@+id/textView4"
-                       android:layout_width="150dp"
+                       android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="Lokasi Check Point "/>
 
@@ -178,7 +185,7 @@
 
                    <TextView
                        android:id="@+id/textView"
-                       android:layout_width="150dp"
+                       android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="Titik Koordinat  "/>
 
@@ -209,7 +216,7 @@
 
                    <TextView
                        android:id="@+id/textView2"
-                       android:layout_width="150dp"
+                       android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="Status Pengecekan "/>
 
@@ -232,7 +239,7 @@
 
                    <TextView
                        android:id="@+id/textView5"
-                       android:layout_width="150dp"
+                       android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="Diperiksa Oleh "/>
 
