--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -105,7 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:id="@+id/recMaps"
-                android:text="Cari di Map"
+                android:text="Lihat di Map"
                 android:gravity="center_vertical"
                 android:textColor="@color/black"
                 android:textSize="14sp"
